Fix content alignment

--- a/static/scss/app.scss
+++ b/static/scss/app.scss
@@ -220,6 +220,9 @@ div.content-section {
         p {
             margin: 2rem 0;
         }
+        h2 {
+            text-align: center;
+        }
         h3 {
             font-weight: bold;
             margin: 2rem 0;
